<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/profilePic"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"
        app:cardCornerRadius="100dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/profile_iconuser_flat_4"
            android:contentDescription="@string/ImageIcon" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Name"
        android:textColor="@color/titleColor"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePic" />

    <TextView
        android:id="@+id/txtbio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/Bio"
        android:textAlignment="center"
        android:textColor="@color/bio"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <View
        android:id="@+id/border"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/txtbio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/border"
        android:layout_marginTop="11dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp" />

    <LinearLayout
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/border"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:paddingTop="15dp"
        android:orientation="vertical"
        android:background="@drawable/layout_border"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/Email"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtEnterEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EnterEmail"
                android:textColor="@color/text"
                android:fontFamily="@font/roboto_light"
                android:layout_marginStart="10dp"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/Phone"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtEnterPhoneNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EnterPhone"
                android:textColor="@color/text"
                android:fontFamily="@font/roboto_light"
                android:layout_marginStart="10dp"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/Location"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtEnterLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EnterLocation"
                android:textColor="@color/text"
                android:fontFamily="@font/roboto_light"
                android:layout_marginStart="10dp"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/Github"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtEnterGitHub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EnterGithub"
                android:textColor="@color/text"
                android:fontFamily="@font/roboto_light"
                android:layout_marginStart="10dp"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/Linkedin"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtEnterLinkedin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/text"
                android:fontFamily="@font/roboto_light"
                android:layout_marginStart="10dp"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/Twitter"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtEnterTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/text"
                android:fontFamily="@font/roboto_light"
                android:layout_marginStart="10dp"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/Instagram"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtEnterInstagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EnterInstagram"
                android:textColor="@color/text"
                android:fontFamily="@font/roboto_light"
                android:layout_marginStart="10dp"
                android:textSize="14sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/Language"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtEnterlanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EnterLanguage"
                android:textColor="@color/text"
                android:fontFamily="@font/roboto_light"
                android:layout_marginStart="10dp"
                android:textSize="14sp"/>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/buttom_shape"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/ShareBtn"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail" />












</androidx.constraintlayout.widget.ConstraintLayout>